new: 添加职业系统
misc: Fixed some issues

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,7 @@ commands:
   joinsg:
     usage: '/joinsg'
     description: 'Try to join the game'
+
+  setcareer:
+    usage: '/setcareer careers'
+    description: 'Set ones career'
