new: 初步实现权限检查 	* 没插文档，写的有点简陋（ 	* 用PermissionUtils而不是直接调用hasPermission可以允许之后切换不同的权限管理后端（比方说LuckPerms）
Signed-off-by: MATRIX-feather <midnightcarnival@outlook.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,13 @@ commands:
 
   game:
     usage: '/game ...'
+
+
+permissions:
+  xiamo.sc.reload:
+    description: Reload config
+    default: false
+
+  xiamo.sc.stopcurrent:
+    description: Stop current
+    default: false
