--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>XiaMoMC</groupId>
     <artifactId>SurvivalCompetition</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>SurvivalCompetition</name>
 
@@ -53,6 +53,10 @@
         </resources>
     </build>
 
+    <modules>
+        <module>pluginbase</module>
+    </modules>
+
     <repositories>
         <repository>
             <id>OnARandomBox</id>
@@ -97,6 +101,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>xiamomc</groupId>
+            <artifactId>pluginbase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
