--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>XiaMoMC</groupId>
     <artifactId>SurvivalCompetition</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>SurvivalCompetition</name>
 
@@ -52,10 +52,6 @@
             </resource>
         </resources>
     </build>
-
-    <modules>
-        <module>pluginbase</module>
-    </modules>
 
     <repositories>
         <repository>
