misc: 使用SubCommandHandler来管理GMCommand和CareerCommand中的子命令 misc: Bump PluginBase misc: 调整默认权限 	* 根节点从xiamo.sc调整为xiamomc.sc, 并且默认对op启用 rm: 移除pluginbase的git module 	* 没删干净
Signed-off-by: MATRIX-feather <midnightcarnival@outlook.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -20,10 +20,10 @@ commands:
 
 
 permissions:
-  xiamo.sc.reload:
+  xiamomc.sc.reload:
     description: reload config
-    default: false
+    default: op
 
-  xiamo.sc.stopcurrent:
+  xiamomc.sc.stopcurrent:
     description: Stop current
-    default: false
+    default: op
