--- a/pom.xml
+++ b/pom.xml
@@ -101,11 +101,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.XiaMoZhiShi</groupId>
             <artifactId>PluginBase</artifactId>
-            <version>0.0.4-alpha</version>
+            <version>0.0.5-alpha</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
