--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
