--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,6 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2
+          key: 1145141919810
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
